/*
 * $Id: ChangeLog,v 1.1087 2003/05/30 01:29:19 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-05-29 22:50 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@uol.com.br>
  * xharbour.spec
    make_rpm.sh
   * removed Flex from BuildPrereq section
  * utils/hbmake/hbmake.prg
    utils/hbmake/hbmutils.prg
     ! Added gtnul and macromt to library list

2003-05-30 03:10 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/xharbour.spec
    * merged with RPMs from xHarbour site
      /etc/harbour/hb-charmap.def, /etc/harbour.cfg and
      /etc/profile.d/harb.sh added

  * xharbour/bin/!pack_src.sh
    * xharbour/source/rtl/gtcrs/*.def files added

2003-05-30 02:35 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/tests/pp.prg
    * OS_PATH_DELIMITER_LIST added

2003-05-30 02:00 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  Sorry I don't include all changes in previous commit. So again:

  * xharbour/tests/pp.prg
    * some additional modification for running .prg files as script
      and to make pp working on *nix systems - '/' as as directory
      delimiter, ':' as a path list separator and some small changes
      for case sensitive file systems
      _DEFAULT_INC_DIR macro added and passing parameters to .prg
      if pp is called pprun - now you can create a link 'pprun' to 'pp'
      and use it as a script interpreter.
      Ron, I've just seen your changelog. I hope this changes merged
      correctly.

  * xharbour/xharbour.spec
    + Now is really _new_binary_ RPM with Ron's PP :-)

  * xharbour/bin/!pack_src.sh
    * tests/*.txt files added

2003-05-29 18:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * include/hbtrac.h
  * source/rtl/trace.c
    * removed my changes till I can better see what's wrong

2003-05-29 15:30 UTC-0800 Ron Pinkas <ron@ronpinkas.com>